Fix alignment in header
Change gap betweem logos

Change padding

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -9,13 +9,11 @@ header{
     margin: 0 auto;
 
     justify-content: center;
-    align-items: flex-start;
-    gap: 183px;
+    gap: 195px;
 
-    padding: 16px 0px 5px 10px;
+    padding: 16px 0px 0px 5px;
 
     height: 67px;
-    width: 375px;
     border-bottom: 1px solid #c6c6c6;
 }
 
@@ -23,13 +21,16 @@ header{
     width: 127px;
     height: 50px;
     margin: 0px;
+    padding-right: 10px;
+
 }
 
 #avatar-logo{
-    width: 34px;
-    height: 34px;
+    width: 33px;
+    height: 33px;
     border-radius: 50%;
     margin: 0px;
+    padding-top: 5px;
 }
 
 /* User profile section */
@@ -38,7 +39,9 @@ header{
     width: 375px;
     display: row;
 
-    padding: 10px; 
+    padding-top: 10px;
+    padding-left: 5px;
+    padding-bottom: 10px;;
     
 }
 
